[package]
name = "ranluxpp-rs"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["ffi", "random", "ranluxpp"]
authors = ["oligami <nziq53@gmail.com>"]
repository = "https://github.com/oligamiq/ranluxpp-rs"
description = "Ranlux++ FFI bindings for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
# bindgen = "0.69"
cc = "1.0"
